added styling with css

--- a/index.html
+++ b/index.html
@@ -11,61 +11,63 @@
 </head>
 <body>
     <header>
-        <!-- <img src="assets/images/pokemonlogo.png" alt="pokemon logo" id="logo-header"> -->
+        <img src="assets/images/pokemonlogo.png" alt="pokemon logo" id="logo-header">
     </header>
     <main>
         <div class="pokemon-container">
-            <img class="pokemon-image" src="" alt="Pokémon"/>
+           <img class="pokemon-image" src="" alt="Pokémon"/>
             <p class="pokemon-name"></p>
         </div>
+    <div id="answer-area">
         <div id="type-area">
             <button class="type-btn" data-type="Grass">
-                <img src="assets/images/type-logos/Grass.png" alt="Grass">
+                <img class="type-icon" src="assets/images/type-logos/Grass.png" alt="Grass">
             </button>
             <button class="type-btn" data-type="Fire">
-                <img src="assets/images/type-logos/Fire.png" alt="Fire">
+                <img class="type-icon" src="assets/images/type-logos/Fire.png" alt="Fire">
             </button>
             <button class="type-btn" data-type="Water">
-                <img src="assets/images/type-logos/Water.png" alt="Water">
+                <img class="type-icon" src="assets/images/type-logos/Water.png" alt="Water">
             </button>
             <button class="type-btn" data-type="Electric">
-                <img src="assets/images/type-logos/Electric.png" alt="Electric">
+                <img class="type-icon" src="assets/images/type-logos/Electric.png" alt="Electric">
             </button>
             <button class="type-btn" data-type="Psychic">
-                <img src="assets/images/type-logos/Psychic.png" alt="Psychic">
+                <img class="type-icon" src="assets/images/type-logos/Psychic.png" alt="Psychic">
             </button>
             <button class="type-btn" data-type="Ice">
-                <img src="assets/images/type-logos/Ice.png" alt="Ice">
+                <img class="type-icon" src="assets/images/type-logos/Ice.png" alt="Ice">
             </button>
             <button class="type-btn" data-type="Dragon">
-                <img src="assets/images/type-logos/Dragon.png" alt="Dragon">
+                <img class="type-icon" src="assets/images/type-logos/Dragon.png" alt="Dragon">
             </button>
             <button class="type-btn" data-type="Ghost">
-                <img src="assets/images/type-logos/Ghost.png" alt="Ghost">
+                <img class="type-icon" src="assets/images/type-logos/Ghost.png" alt="Ghost">
             </button>
             <button class="type-btn" data-type="Bug">
-                <img src="assets/images/type-logos/Bug.png" alt="Bug">
+                <img class="type-icon" src="assets/images/type-logos/Bug.png" alt="Bug">
             </button>
             <button class="type-btn" data-type="Rock">
-                <img src="assets/images/type-logos/Rock.png" alt="Rock">
+                <img class="type-icon" src="assets/images/type-logos/Rock.png" alt="Rock">
             </button>
             <button class="type-btn" data-type="Ground">
-                <img src="assets/images/type-logos/Ground.png" alt="Ground">
+                <img class="type-icon" src="assets/images/type-logos/Ground.png" alt="Ground">
             </button>
             <button class="type-btn" data-type="Poison">
-                <img src="assets/images/type-logos/Poison.png" alt="Poison">
+                <img class="type-icon" src="assets/images/type-logos/Poison.png" alt="Poison">
             </button>
             <button class="type-btn" data-type="Flying">
-                <img src="assets/images/type-logos/Flying.png" alt="Flying">
+                <img class="type-icon" src="assets/images/type-logos/Flying.png" alt="Flying">
             </button>
             <button class="type-btn" data-type="Fighting">
-                <img src="assets/images/type-logos/Fighting.png" alt="Fighting">
+                <img class="type-icon" src="assets/images/type-logos/Fighting.png" alt="Fighting">
             </button>
             <button class="type-btn" data-type="Normal">
-                <img src="assets/images/type-logos/Normal.png" alt="Normal">
+                <img class="type-icon" src="assets/images/type-logos/Normal.png" alt="Normal">
             </button>
         </div>
-        
+        <button id="next-question"><img id="next-img" src="assets/images/nextquestion.png" alt="Next Question?"></button>
+    </div>
     </main>
     <footer>
 
@@ -73,4 +75,5 @@
 
     <script src="assets/js/script.js"></script>
 </body>
+<footer>@Pokémon</footer>
 </html>
