added type button event listener

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <div class="pokemon-container">
-           <img class="pokemon-image" src="" alt="Pokémon"/>
-            <p class="pokemon-name"></p>
+           <img id="pokemon-image" src="" alt="Pokémon" style="display: none;"/>
+            <p id="pokemon-name"></p>
         </div>
     <div id="answer-area">
         <div id="type-area">
