Added styling to footer

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
     </div>
     </main>
     <footer>
-
+        <img class="pokeball-icon" src="assets/images/pokemon-icon.png" alt="Pokéball Icon">
+            <p>@Pokémon</p>
+        <img class="pokeball-icon" src="assets/images/pokemon-icon.png" alt="Pokéball Icon">
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
-<footer>@Pokémon</footer>
 </html>
