added functionalityctionality to type buttons and filtered unwanted poke types

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Test your knowledge in Gen 1 Pokémons!">
     <meta name="keywords" content="pokemon, gen1, quiz, 151">
+    <meta name="theme-color" content="red">
     <title>Pokémon Quiz Gen 1</title>
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
     
+    
+
 </head>
 <body>
     <header>
@@ -20,53 +28,53 @@
         </div>
     <div id="answer-area">
         <div id="type-area">
-            <button class="type-btn" data-type="Grass">
-                <img class="type-icon" src="assets/images/type-logos/Grass.png" alt="Grass">
+            <button class="type-btn" data-type="grass">
+                <img class="type-icon" src="assets/images/type-logos/Grass.png" alt="grass">
             </button>
-            <button class="type-btn" data-type="Fire">
-                <img class="type-icon" src="assets/images/type-logos/Fire.png" alt="Fire">
+            <button class="type-btn" data-type="fire">
+                <img class="type-icon" src="assets/images/type-logos/Fire.png" alt="fire">
             </button>
-            <button class="type-btn" data-type="Water">
-                <img class="type-icon" src="assets/images/type-logos/Water.png" alt="Water">
+            <button class="type-btn" data-type="water">
+                <img class="type-icon" src="assets/images/type-logos/Water.png" alt="water">
             </button>
-            <button class="type-btn" data-type="Electric">
-                <img class="type-icon" src="assets/images/type-logos/Electric.png" alt="Electric">
+            <button class="type-btn" data-type="electric">
+                <img class="type-icon" src="assets/images/type-logos/Electric.png" alt="electric">
             </button>
-            <button class="type-btn" data-type="Psychic">
-                <img class="type-icon" src="assets/images/type-logos/Psychic.png" alt="Psychic">
+            <button class="type-btn" data-type="psychic">
+                <img class="type-icon" src="assets/images/type-logos/Psychic.png" alt="psychic">
             </button>
-            <button class="type-btn" data-type="Ice">
-                <img class="type-icon" src="assets/images/type-logos/Ice.png" alt="Ice">
+            <button class="type-btn" data-type="ice">
+                <img class="type-icon" src="assets/images/type-logos/Ice.png" alt="ice">
             </button>
-            <button class="type-btn" data-type="Dragon">
-                <img class="type-icon" src="assets/images/type-logos/Dragon.png" alt="Dragon">
+            <button class="type-btn" data-type="dragon">
+                <img class="type-icon" src="assets/images/type-logos/Dragon.png" alt="dragon">
             </button>
-            <button class="type-btn" data-type="Ghost">
-                <img class="type-icon" src="assets/images/type-logos/Ghost.png" alt="Ghost">
+            <button class="type-btn" data-type="ghost">
+                <img class="type-icon" src="assets/images/type-logos/Ghost.png" alt="ghost">
             </button>
-            <button class="type-btn" data-type="Bug">
-                <img class="type-icon" src="assets/images/type-logos/Bug.png" alt="Bug">
+            <button class="type-btn" data-type="bug">
+                <img class="type-icon" src="assets/images/type-logos/Bug.png" alt="bug">
             </button>
-            <button class="type-btn" data-type="Rock">
-                <img class="type-icon" src="assets/images/type-logos/Rock.png" alt="Rock">
+            <button class="type-btn" data-type="rock">
+                <img class="type-icon" src="assets/images/type-logos/Rock.png" alt="rock">
             </button>
-            <button class="type-btn" data-type="Ground">
-                <img class="type-icon" src="assets/images/type-logos/Ground.png" alt="Ground">
+            <button class="type-btn" data-type="ground">
+                <img class="type-icon" src="assets/images/type-logos/Ground.png" alt="ground">
             </button>
-            <button class="type-btn" data-type="Poison">
-                <img class="type-icon" src="assets/images/type-logos/Poison.png" alt="Poison">
+            <button class="type-btn" data-type="poison">
+                <img class="type-icon" src="assets/images/type-logos/Poison.png" alt="poison">
             </button>
-            <button class="type-btn" data-type="Flying">
-                <img class="type-icon" src="assets/images/type-logos/Flying.png" alt="Flying">
+            <button class="type-btn" data-type="flying">
+                <img class="type-icon" src="assets/images/type-logos/Flying.png" alt="flying">
             </button>
-            <button class="type-btn" data-type="Fighting">
-                <img class="type-icon" src="assets/images/type-logos/Fighting.png" alt="Fighting">
+            <button class="type-btn" data-type="fighting">
+                <img class="type-icon" src="assets/images/type-logos/Fighting.png" alt="fighting">
             </button>
-            <button class="type-btn" data-type="Normal">
-                <img class="type-icon" src="assets/images/type-logos/Normal.png" alt="Normal">
+            <button class="type-btn" data-type="normal">
+                <img class="type-icon" src="assets/images/type-logos/Normal.png" alt="normal">
             </button>
         </div>
-        <button id="next-question"><img id="next-img" src="assets/images/nextquestion.png" alt="Next Question?"></button>
+        <button id="next-question" class="type-btn" data-type="Passed"><img id="next-img" src="assets/images/nextquestion.png" alt="Next Question?"></button>
     </div>
     </main>
     <footer>
