created indicators for score and time

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <div class="pokemon-container">
            <img id="pokemon-image" src="" alt="Pokémon" style="display: none;"/>
             <p id="pokemon-name"></p>
-            <p id="answer-indicator"></p>
+            <div class="indicators">
+                <p class="score-time" id="score-display">Score: 151</p>
+                <p id="answer-indicator"></p>
+                <p class="score-time">Time: 99</p>
+            </div>
+
         </div>
     <div id="answer-area">
         <div id="type-area">
