--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </header>
     <main>
         <div id="start-screen">
-
+            <img id="start-pokemon-image" src="" alt="Pokémon" style="display: none;"/>
         </div>
         <div id="game-screen">
             <div class="pokemon-container">
-                <img id="pokemon-image" src="" alt="Pokémon" style="display: none;" />
+                <img id="pokemon-image" src="" alt="Pokémon" style="display: none;"/>
                 <p id="pokemon-name"></p>
                 <div class="indicators">
                     <p class="score-time" id="score-display">Score: 0</p>
@@ -96,7 +96,9 @@
 
         </div>
         <div id="score-screen">
-
+            <h1>Your Score!</h1>
+            <p id="final-score">0</p>
+            <button id="restart-button"><img src="assets/images/play_again.png" alt="Play Again?"></button>
         </div>
 
     </main>
