start page finish

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <main>
         <div id="start-screen">
             <img id="start-pokemon-image" src="" alt="Pokémon" style="display: none;"/>
+            <p>Pokémon 151 Quiz!</p>
+            <button id="start-btn"><img src="assets/images/start.png" alt="Start the quiz"></button>
         </div>
         <div id="game-screen">
             <div class="pokemon-container">
