start and reset button, game timer, and filter mechanics finished.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="indicators">
                     <p class="score-time" id="score-display">Score: 0</p>
                     <p id="answer-indicator"></p>
-                    <p class="score-time">Time: 99</p>
+                    <p class="score-time">Time: <span id="timer-display"></span></p>
                 </div>
 
             </div>
@@ -100,7 +100,7 @@
         <div id="score-screen">
             <h1>Your Score!</h1>
             <p id="final-score">0</p>
-            <button id="restart-button"><img src="assets/images/play_again.png" alt="Play Again?"></button>
+            <button id="restart-btn"><img src="assets/images/play_again.png" alt="Play Again?"></button>
         </div>
 
     </main>
