Rewrote fetching code for significant better gameplay.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Test your knowledge in Gen 1 Pokémons!">
     <meta name="keywords" content="pokemon, gen1, quiz, 151">
     <meta name="theme-color" content="red">
@@ -25,13 +25,13 @@
     </header>
     <main>
         <div id="start-screen">
-            <img id="start-pokemon-image" src="" alt="Pokémon" style="display: none;"/>
+            <img id="start-pokemon-image" src="" alt="Pokémon" style="display: none;">
             <p>Pokémon 151 Quiz!</p>
             <button id="start-btn"><img src="assets/images/start.png" alt="Start the quiz"></button>
         </div>
         <div id="game-screen">
             <div class="pokemon-container">
-                <img id="pokemon-image" src="" alt="Pokémon" style="display: none;"/>
+                <img id="pokemon-image" src="" alt="Pokémon" style="display: none;">
                 <p id="pokemon-name"></p>
                 <div class="indicators">
                     <p class="score-time" id="score-display">Score: 0</p>
@@ -43,49 +43,49 @@
             <div id="answer-area">
                 <div id="type-area">
                     <button class="type-btn" data-type="grass">
-                        <img class="type-icon" src="assets/images/type-logos/Grass.png" alt="grass">
+                        <img class="type-icon" src="assets/images/type-logos/grass.png" alt="grass">
                     </button>
                     <button class="type-btn" data-type="fire">
-                        <img class="type-icon" src="assets/images/type-logos/Fire.png" alt="fire">
+                        <img class="type-icon" src="assets/images/type-logos/fire.png" alt="fire">
                     </button>
                     <button class="type-btn" data-type="water">
-                        <img class="type-icon" src="assets/images/type-logos/Water.png" alt="water">
+                        <img class="type-icon" src="assets/images/type-logos/water.png" alt="water">
                     </button>
                     <button class="type-btn" data-type="electric">
-                        <img class="type-icon" src="assets/images/type-logos/Electric.png" alt="electric">
+                        <img class="type-icon" src="assets/images/type-logos/electric.png" alt="electric">
                     </button>
                     <button class="type-btn" data-type="psychic">
-                        <img class="type-icon" src="assets/images/type-logos/Psychic.png" alt="psychic">
+                        <img class="type-icon" src="assets/images/type-logos/psychic.png" alt="psychic">
                     </button>
                     <button class="type-btn" data-type="ice">
-                        <img class="type-icon" src="assets/images/type-logos/Ice.png" alt="ice">
+                        <img class="type-icon" src="assets/images/type-logos/ice.png" alt="ice">
                     </button>
                     <button class="type-btn" data-type="dragon">
-                        <img class="type-icon" src="assets/images/type-logos/Dragon.png" alt="dragon">
+                        <img class="type-icon" src="assets/images/type-logos/dragon.png" alt="dragon">
                     </button>
                     <button class="type-btn" data-type="ghost">
-                        <img class="type-icon" src="assets/images/type-logos/Ghost.png" alt="ghost">
+                        <img class="type-icon" src="assets/images/type-logos/ghost.png" alt="ghost">
                     </button>
                     <button class="type-btn" data-type="bug">
-                        <img class="type-icon" src="assets/images/type-logos/Bug.png" alt="bug">
+                        <img class="type-icon" src="assets/images/type-logos/bug.png" alt="bug">
                     </button>
                     <button class="type-btn" data-type="rock">
-                        <img class="type-icon" src="assets/images/type-logos/Rock.png" alt="rock">
+                        <img class="type-icon" src="assets/images/type-logos/rock.png" alt="rock">
                     </button>
                     <button class="type-btn" data-type="ground">
-                        <img class="type-icon" src="assets/images/type-logos/Ground.png" alt="ground">
+                        <img class="type-icon" src="assets/images/type-logos/ground.png" alt="ground">
                     </button>
                     <button class="type-btn" data-type="poison">
-                        <img class="type-icon" src="assets/images/type-logos/Poison.png" alt="poison">
+                        <img class="type-icon" src="assets/images/type-logos/poison.png" alt="poison">
                     </button>
                     <button class="type-btn" data-type="flying">
-                        <img class="type-icon" src="assets/images/type-logos/Flying.png" alt="flying">
+                        <img class="type-icon" src="assets/images/type-logos/flying.png" alt="flying">
                     </button>
                     <button class="type-btn" data-type="fighting">
-                        <img class="type-icon" src="assets/images/type-logos/Fighting.png" alt="fighting">
+                        <img class="type-icon" src="assets/images/type-logos/fighting.png" alt="fighting">
                     </button>
                     <button class="type-btn" data-type="normal">
-                        <img class="type-icon" src="assets/images/type-logos/Normal.png" alt="normal">
+                        <img class="type-icon" src="assets/images/type-logos/normal.png" alt="normal">
                     </button>
                 </div>
                 <div id="nxtqst-container">
