added tutorial screen

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         <img src="assets/images/pokemonlogo.png" alt="pokemon logo" id="logo-header">
     </header>
     <main>
+        <div id="tutorial">
+            <h1>How to Play</h1>
+            <p>Match the Pokémon types as quickly as possible to earn points!</p>
+            <ul>
+                <li>Press Start to begin the quiz.</li>                
+                <li>Select the correct Pokémon type.</li>
+                <li>Some Pokémon May Have Double Types!</li>
+                <li>Beat the timer to get the highest score!</li>
+
+            </ul>
+            <button id="next-btn"><img src="assets/images/got_it.png" alt="Got it!, Exit Tutorial"></button>
+        </div>
         <div id="start-screen">
             <img id="start-pokemon-image" src="" alt="Pokémon" style="display: none;">
             <p>Pokémon 151 Quiz!</p>
